Setup Member Module.

--- a/frontends/member_module/index.html
+++ b/frontends/member_module/index.html
@@ -7,7 +7,7 @@
     <title>Yoski-Kan - Member Module</title>
 </head>
 <body>
-<div id="app"></div>
+<div id="mm_module"></div>
 <script type="module" src="/src/main.ts"></script>
 </body>
 </html>
